--- a/views/mydata.pug
+++ b/views/mydata.pug
@@ -2,4 +2,4 @@ extends layout
 
 block content
   h1= title
-  p I love to ride bike alone.#{Yaramala Shilpa}
+  p I love to ride bike alone.#{title}
